# Tienda_dispositivos_electronicos

./: Archivos Gabriel.lnk  CMakeLists.txt  dispositivos_electronicos.cpp  dispositivos_electronicos.h  dispositivos_electronicos.ui  main.cpp
